--- a/index.qmd
+++ b/index.qmd
@@ -1,16 +1,16 @@
 ---
-title: "A place for my half-baked thoughts"
+title: "Abdullah Zeeshan"
+about:
+  template: jolla
+  image: images/profile_picture.png
+comments: false
 listing:
-  contents: posts
-  sort: "date desc"
-  type: table
-  categories: true
-  sort-ui: false
-  filter-ui: false
-page-layout: full
-title-block-banner: true
-toc: false
+  contents: gallery.yml
+  type: grid
+  fields: [title, subtitle, description, image]
+  image-height: 250px
 ---
 
-## Posts
+A chap in his mid-20s on a voyage of self discovery.
 
+---
